{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 48,
  "lineage": "9e3bdc20-9843-0403-88a9-51920baecf5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c35c1018e7c460c4",
            "arn": "arn:aws:ec2:eu-central-1:729691315449:instance/i-07880210509a82c66",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07880210509a82c66",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "aws-java-app-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c265faf18a14eabc",
            "private_dns": "ip-10-250-226-199.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.226.199",
            "public_dns": "ec2-3-70-53-159.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.70.53.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0462127213c7bbe4d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060d1d1453fdeea83",
            "tags": {
              "Cluster": "java-app",
              "Name": "kubernetes-java-app-bastion-0",
              "Role": "bastion-java-app-0"
            },
            "tags_all": {
              "Cluster": "java-app",
              "Name": "kubernetes-java-app-bastion-0",
              "Role": "bastion-java-app-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01551bbb76f0bf3cc"
            ]
          },
          "dependencies": [
            "data.aws_ami.distro",
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c35c1018e7c460c4",
            "arn": "arn:aws:ec2:eu-central-1:729691315449:instance/i-00ef6e541dfcfe0a8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kube_java-app_master_profile",
            "id": "i-00ef6e541dfcfe0a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "aws-java-app-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041b39a7f823d7f45",
            "private_dns": "ip-10-250-199-209.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.199.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0f9807d6249612d13",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0554abd9e09e84716",
            "tags": {
              "Name": "kubernetes-java-app-master0",
              "Role": "master",
              "kubernetes.io/cluster/java-app": "member"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-master0",
              "Role": "master",
              "kubernetes.io/cluster/java-app": "member"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01551bbb76f0bf3cc"
            ]
          },
          "dependencies": [
            "data.aws_ami.distro",
            "module.aws-iam.aws_iam_instance_profile.kube_control_plane",
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c35c1018e7c460c4",
            "arn": "arn:aws:ec2:eu-central-1:729691315449:instance/i-0b9e0fe031dd7da25",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kube_java-app_node_profile",
            "id": "i-0b9e0fe031dd7da25",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "aws-java-app-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1859f6576c650de",
            "private_dns": "ip-10-250-192-108.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.192.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0822f57b08deb5740",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0554abd9e09e84716",
            "tags": {
              "Name": "kubernetes-java-app-worker0",
              "Role": "worker",
              "kubernetes.io/cluster/java-app": "member"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-worker0",
              "Role": "worker",
              "kubernetes.io/cluster/java-app": "member"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01551bbb76f0bf3cc"
            ]
          },
          "dependencies": [
            "data.aws_ami.distro",
            "module.aws-iam.aws_iam_instance_profile.kube-worker",
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c35c1018e7c460c4",
            "arn": "arn:aws:ec2:eu-central-1:729691315449:instance/i-0103b0f2bc2f53a3b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "kube_java-app_node_profile",
            "id": "i-0103b0f2bc2f53a3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "aws-java-app-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e4459cbfa8a1381a",
            "private_dns": "ip-10-250-219-35.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.250.219.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-045962fda8e89723e",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b1f731aeb8981c6",
            "tags": {
              "Name": "kubernetes-java-app-worker1",
              "Role": "worker",
              "kubernetes.io/cluster/java-app": "member"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-worker1",
              "Role": "worker",
              "kubernetes.io/cluster/java-app": "member"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01551bbb76f0bf3cc"
            ]
          },
          "dependencies": [
            "data.aws_ami.distro",
            "module.aws-iam.aws_iam_instance_profile.kube-worker",
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-attach_master_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:targetgroup/kubernetes-nlb-tg-java-app/a7aaeae5bd4c741c-20240729183636514900000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:targetgroup/kubernetes-nlb-tg-java-app/a7aaeae5bd4c741c",
            "target_id": "10.250.199.209"
          },
          "dependencies": [
            "aws_instance.k8s-master",
            "data.aws_ami.distro",
            "module.aws-iam.aws_iam_instance_profile.kube_control_plane",
            "module.aws-nlb.aws_lb_target_group.aws-nlb-api-tg",
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "aws-nlb-api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:loadbalancer/net/kubernetes-nlb-java-app/ac31c66387704ff9",
            "arn_suffix": "net/kubernetes-nlb-java-app/ac31c66387704ff9",
            "dns_name": "kubernetes-nlb-java-app-ac31c66387704ff9.elb.eu-central-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:loadbalancer/net/kubernetes-nlb-java-app/ac31c66387704ff9",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "kubernetes-nlb-java-app",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02efc85b32f7efdbb"
              },
              {
                "subnet_id": "subnet-060d1d1453fdeea83"
              }
            ],
            "subnets": [
              "subnet-02efc85b32f7efdbb",
              "subnet-060d1d1453fdeea83"
            ],
            "tags": {
              "Name": "kubernetes-java-app-nlb-api"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-nlb-api"
            },
            "vpc_id": "vpc-0401e1be6f56790f5",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "aws-nlb-api-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:listener/net/kubernetes-nlb-java-app/ac31c66387704ff9/37532d73dd1f093a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:targetgroup/kubernetes-nlb-tg-java-app/a7aaeae5bd4c741c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:listener/net/kubernetes-nlb-java-app/ac31c66387704ff9/37532d73dd1f093a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:loadbalancer/net/kubernetes-nlb-java-app/ac31c66387704ff9",
            "mutual_authentication": [],
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-nlb.aws_lb.aws-nlb-api",
            "module.aws-nlb.aws_lb_target_group.aws-nlb-api-tg",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws-nlb-api-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:targetgroup/kubernetes-nlb-tg-java-app/a7aaeae5bd4c741c",
            "arn_suffix": "targetgroup/kubernetes-nlb-tg-java-app/a7aaeae5bd4c741c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:729691315449:targetgroup/kubernetes-nlb-tg-java-app/a7aaeae5bd4c741c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:729691315449:loadbalancer/net/kubernetes-nlb-java-app/ac31c66387704ff9"
            ],
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "kubernetes-nlb-tg-java-app",
            "port": 6443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "cluster-nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9e200c7233829c9",
            "arn": "arn:aws:ec2:eu-central-1:729691315449:elastic-ip/eipalloc-0d9e200c7233829c9",
            "association_id": "eipassoc-0c26a1723800bd5e8",
            "domain": "vpc",
            "id": "eipalloc-0d9e200c7233829c9",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0b98fd09f302a657a",
            "private_dns": "ip-10-250-238-222.eu-central-1.compute.internal",
            "private_ip": "10.250.238.222",
            "public_dns": "ec2-35-156-11-166.eu-central-1.compute.amazonaws.com",
            "public_ip": "35.156.11.166",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04583e45a3b2a249c",
            "arn": "arn:aws:ec2:eu-central-1:729691315449:elastic-ip/eipalloc-04583e45a3b2a249c",
            "association_id": "eipassoc-034917f31dd9186f2",
            "domain": "vpc",
            "id": "eipalloc-04583e45a3b2a249c",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-00f5ed78ccef88c60",
            "private_dns": "ip-10-250-255-200.eu-central-1.compute.internal",
            "private_ip": "10.250.255.200",
            "public_dns": "ec2-18-195-135-238.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.135.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cluster-vpc-internetgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:internet-gateway/igw-0adbb7bf1c66f214f",
            "id": "igw-0adbb7bf1c66f214f",
            "owner_id": "729691315449",
            "tags": {
              "Name": "kubernetes-java-app-internetgw"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-internetgw"
            },
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cluster-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9e200c7233829c9",
            "association_id": "eipassoc-0c26a1723800bd5e8",
            "connectivity_type": "public",
            "id": "nat-09102021c1bf2b3c5",
            "network_interface_id": "eni-0b98fd09f302a657a",
            "private_ip": "10.250.238.222",
            "public_ip": "35.156.11.166",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-060d1d1453fdeea83"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04583e45a3b2a249c",
            "association_id": "eipassoc-034917f31dd9186f2",
            "connectivity_type": "public",
            "id": "nat-0fcf4ac09d9efccc0",
            "network_interface_id": "eni-00f5ed78ccef88c60",
            "private_ip": "10.250.255.200",
            "public_ip": "18.195.135.238",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02efc85b32f7efdbb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:route-table/rtb-01f0053c591ea65f6",
            "id": "rtb-01f0053c591ea65f6",
            "owner_id": "729691315449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09102021c1bf2b3c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes-java-app-routetable-private-0"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-routetable-private-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_nat_gateway.cluster-nat-gateway",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:route-table/rtb-055f9b9ebaca33d4b",
            "id": "rtb-055f9b9ebaca33d4b",
            "owner_id": "729691315449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fcf4ac09d9efccc0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes-java-app-routetable-private-1"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-routetable-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_nat_gateway.cluster-nat-gateway",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:route-table/rtb-0a76987d85d29d98c",
            "id": "rtb-0a76987d85d29d98c",
            "owner_id": "729691315449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adbb7bf1c66f214f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes-java-app-routetable-public"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-routetable-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_internet_gateway.cluster-vpc-internetgw",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c7e8331f98859d3",
            "route_table_id": "rtb-01f0053c591ea65f6",
            "subnet_id": "subnet-0554abd9e09e84716"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_nat_gateway.cluster-nat-gateway",
            "module.aws-vpc.aws_route_table.kubernetes-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c072a520a452bfb",
            "route_table_id": "rtb-055f9b9ebaca33d4b",
            "subnet_id": "subnet-01b1f731aeb8981c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_eip.cluster-nat-eip",
            "module.aws-vpc.aws_nat_gateway.cluster-nat-gateway",
            "module.aws-vpc.aws_route_table.kubernetes-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-private",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kubernetes-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7bc72b397784bc8",
            "route_table_id": "rtb-0a76987d85d29d98c",
            "subnet_id": "subnet-060d1d1453fdeea83"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_internet_gateway.cluster-vpc-internetgw",
            "module.aws-vpc.aws_route_table.kubernetes-public",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02303d58dd3824a5c",
            "route_table_id": "rtb-0a76987d85d29d98c",
            "subnet_id": "subnet-02efc85b32f7efdbb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_internet_gateway.cluster-vpc-internetgw",
            "module.aws-vpc.aws_route_table.kubernetes-public",
            "module.aws-vpc.aws_subnet.cluster-vpc-subnets-public",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:security-group/sg-01551bbb76f0bf3cc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01551bbb76f0bf3cc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.250.192.0/18"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kubernetes-java-app-securitygroup",
            "name_prefix": "",
            "owner_id": "729691315449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kubernetes-java-app-securitygroup"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-all-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1060047780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01551bbb76f0bf3cc",
            "security_group_rule_id": "sgr-0e868257793b243e0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-all-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.250.192.0/18"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4206085601",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-01551bbb76f0bf3cc",
            "security_group_rule_id": "sgr-00a6c43b81e667e82",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow-ssh-connections",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3032628406",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01551bbb76f0bf3cc",
            "security_group_rule_id": "sgr-041ad84f62102c519",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws-vpc.aws_security_group.kubernetes",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster-vpc-subnets-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:subnet/subnet-0554abd9e09e84716",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.250.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0554abd9e09e84716",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729691315449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes-java-app-eu-central-1a-private",
              "kubernetes.io/cluster/java-app": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-eu-central-1a-private",
              "kubernetes.io/cluster/java-app": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:subnet/subnet-01b1f731aeb8981c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.250.208.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b1f731aeb8981c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729691315449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes-java-app-eu-central-1b-private",
              "kubernetes.io/cluster/java-app": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-eu-central-1b-private",
              "kubernetes.io/cluster/java-app": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cluster-vpc-subnets-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:subnet/subnet-060d1d1453fdeea83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.250.224.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060d1d1453fdeea83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729691315449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes-java-app-eu-central-1a-public",
              "kubernetes.io/cluster/java-app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-eu-central-1a-public",
              "kubernetes.io/cluster/java-app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:subnet/subnet-02efc85b32f7efdbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.250.240.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02efc85b32f7efdbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729691315449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kubernetes-java-app-eu-central-1b-public",
              "kubernetes.io/cluster/java-app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-eu-central-1b-public",
              "kubernetes.io/cluster/java-app": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0401e1be6f56790f5"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aws-vpc.aws_vpc.cluster-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:729691315449:vpc/vpc-0401e1be6f56790f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.192.0/18",
            "default_network_acl_id": "acl-032f6691edda6ca01",
            "default_route_table_id": "rtb-0cacc39fd797140c5",
            "default_security_group_id": "sg-02642c7a8effde39f",
            "dhcp_options_id": "dopt-078827950a6f29367",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0401e1be6f56790f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cacc39fd797140c5",
            "owner_id": "729691315449",
            "tags": {
              "Name": "kubernetes-java-app-vpc"
            },
            "tags_all": {
              "Name": "kubernetes-java-app-vpc"
            }
          }
        }
      ]
    }
  ]
}